[package]
name = "caliban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
glam = "0.24.1"
lazy_static = "1.4.0"
log = "0.4.19"
png = "0.17.11"
pretty_env_logger = "0.5.0"
thiserror = "1.0.40"
tobj = "4.0.2"
vulkanalia = {version = "0.21.0", features = ["window", "libloading"]}
winit = "0.28.6"
